add missing trans

--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-10 09:23+0100\n"
+"POT-Creation-Date: 2024-05-10 09:41+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -962,6 +962,20 @@ msgstr "Llwydd"
 #: grc/templates/base.html:110
 msgid "Email resent"
 msgstr "E-bost wedi'i ail anfon"
+
+#: grc/templates/base.html:157 grc/templates/policies/privacy-policy.html:10
+msgid "Privacy policy"
+msgstr "Polisi Preifatrwydd"
+
+#: grc/templates/base.html:162
+#: grc/templates/policies/accessibility-statement.html:3
+msgid "Accessibility statement"
+msgstr "Datganiad hygyrchedd"
+
+#: grc/templates/base.html:167 grc/templates/policies/cookies.html:3
+#: grc/templates/policies/cookies.html:20
+msgid "Cookies"
+msgstr "Cwyis"
 
 #: grc/templates/security-code.html:7 grc/templates/security-code.html:20
 msgid "Enter security code"
@@ -2557,11 +2571,6 @@ msgstr ""
 "Rhaid iddo fod o leiaf 2 flynedd cyn i chi gyflwyno’ch cais am Dystysgrif"
 " Cydnabod Rhywedd."
 
-#: grc/templates/policies/accessibility-statement.html:3
-#, fuzzy
-msgid "Accessibility statement"
-msgstr "Datganiadau academaidd"
-
 #: grc/templates/policies/accessibility-statement.html:10
 msgid ""
 "Accessibility statement for Gender Recognition Certificate application "
@@ -2920,10 +2929,6 @@ msgstr "Profwyd y wefan hon ddiwethaf ar 26 Mai 2022"
 msgid "The test was carried out by the Digital Accessibility Centre"
 msgstr "Cynhaliwyd y prawf gan y Ganolfan Hygyrchedd Digidol"
 
-#: grc/templates/policies/cookies.html:3 grc/templates/policies/cookies.html:20
-msgid "Cookies"
-msgstr "Cwyis"
-
 #: grc/templates/policies/cookies.html:16
 msgid "You’ve set your cookie preferences"
 msgstr "Rydych wedi cadw eich dewisiadau cwcis"
@@ -3118,10 +3123,6 @@ msgstr "Cadw gosodiadau cwcis"
 
 #: grc/templates/policies/privacy-policy.html:3
 msgid "Privacy Policy"
-msgstr "Polisi Preifatrwydd"
-
-#: grc/templates/policies/privacy-policy.html:10
-msgid "Privacy policy"
 msgstr "Polisi Preifatrwydd"
 
 #: grc/templates/policies/privacy-policy.html:13
@@ -3595,7 +3596,7 @@ msgstr ""
 
 #: grc/templates/start-application/declaration.html:40
 msgid "I consent"
-msgstr ""
+msgstr "Rwy’n rhoi caniatâd"
 
 #: grc/templates/start-application/email-address.html:19
 msgid ""
@@ -3646,7 +3647,7 @@ msgstr "wneud cais am Dystysgrif Cydnabod Rhywedd (yn agor mewn tab newydd)"
 #: grc/templates/start-application/is-first-visit.html:8
 #: grc/templates/start-application/is-first-visit.html:31
 msgid "Have you already started an application?"
-msgstr ""
+msgstr "Ydych chi eisoes wedi cychwyn gwneud cais?"
 
 #: grc/templates/start-application/is-first-visit.html:25
 msgid "You will need to start a new application"
