--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-13 10:23+0100\n"
+"POT-Creation-Date: 2024-05-13 11:51+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -3798,15 +3798,27 @@ msgstr ""
 "Unwaith y byddwch wedi uwchlwytho eich holl ffeiliau, cliciwch y botwm "
 "\"Cadw a pharhau\""
 
-#: grc/templates/upload/_upload-files-section.html:168
+#: grc/templates/upload/_upload-files-section.html:166
+#, fuzzy
+msgid "You must upload a scan or good quality photograph of your documents."
+msgstr "Uwchlwythwch sgan neu ffotograff o ansawdd da"
+
+#: grc/templates/upload/_upload-files-section.html:167
+#, fuzzy
+msgid "If the document is longer than one page, you must upload every page."
+msgstr ""
+"Os yw’r adroddiad yn hirach nag un tudalen, mae’n rhaid i chi uwchlwytho "
+"pob tudalen."
+
+#: grc/templates/upload/_upload-files-section.html:175
 msgid "Warning"
 msgstr "Rhybudd"
 
-#: grc/templates/upload/_upload-files-section.html:169
+#: grc/templates/upload/_upload-files-section.html:176
 msgid "We will only accept clear images of full pages."
 msgstr "Byddwn ond yn derbyn delweddau clir o dudalennau llawn."
 
-#: grc/templates/upload/_upload-files-section.html:170
+#: grc/templates/upload/_upload-files-section.html:177
 msgid ""
 "If you take a photograph, please make sure all 4 corners of each page are"
 " visible."
@@ -3814,13 +3826,13 @@ msgstr ""
 "Os byddwch yn tynnu llun, gwnewch yn siŵr bod pob 4 cornel o bob tudalen "
 "yn weladwy."
 
-#: grc/templates/upload/_upload-files-section.html:177
+#: grc/templates/upload/_upload-files-section.html:184
 msgid "We process and protect all documents you upload in accordance with our"
 msgstr ""
 "Rydym yn prosesu ac yn diogelu pob dogfen rydych chi'n ei huwchlwytho yn "
 "unol â'n"
 
-#: grc/templates/upload/_upload-files-section.html:179
+#: grc/templates/upload/_upload-files-section.html:186
 msgid "privacy policy (opens in a new tab)"
 msgstr "polisi preifatrwydd (yn agor mewn tab newydd)"
 
@@ -3905,6 +3917,64 @@ msgstr ""
 #: grc/templates/upload/medical-reports.html:42
 msgid "Please upload the files in page order if you can."
 msgstr "Uwchlwythwch y ffeiliau yn eu trefn os yw’n bosibl."
+
+#: grc/templates/upload/statutory-declarations.html:6
+#: grc/templates/upload/statutory-declarations.html:19
+msgid "Statutory declarations documents"
+msgstr "Dogfennau datganiadau statudol"
+
+#: grc/templates/upload/statutory-declarations.html:22
+msgid ""
+"This is where you can upload copies of all required statutory "
+"declarations."
+msgstr ""
+"Dyma ble y gallwch uwchlwytho copïau o’r holl ddatganiadau statudol "
+"gofynnol."
+
+#: grc/templates/upload/statutory-declarations.html:25
+msgid "You must upload either:"
+msgstr "Mae’n rhaid i chi uwchlwytho naill ai:"
+
+#: grc/templates/upload/statutory-declarations.html:28
+msgid "a statutory declaration for single applicants"
+msgstr "datganiad statudol ar gyfer ceiswyr sengl"
+
+#: grc/templates/upload/statutory-declarations.html:29
+msgid ""
+"a statutory declaration for applicants who are married or in a civil "
+"partnership"
+msgstr "datganiad statudol ar gyfer ceiswyr sy’n briod neu mewn partneriaeth sifil"
+
+#: grc/templates/upload/statutory-declarations.html:32
+msgid ""
+"If you fill out the statutory declaration for applicants who are married "
+"or in a civil partnership\n"
+"                and you intend to stay in that marriage or civil "
+"partnership after you receive a certificate,\n"
+"                you must also upload a statutory declaration signed by "
+"your spouse or civil partner."
+msgstr ""
+"Os ydych chi’n llenwi’r datganiad statudol ar gyfer ceiswyr sy’n briod "
+"neu mewn partneriaeth sifil a’ch bod yn bwriadu aros yn y briodas neu’r "
+"bartneriaeth sifil ar ôl i chi gael tystysgrif, mae’n rhaid i chi hefyd "
+"uwchlwytho datganiad statudol wedi’i lofnodi gan eich priod neu bartner "
+"sifil."
+
+#: grc/templates/upload/statutory-declarations.html:37
+msgid "Follow the"
+msgstr "Dilynwch y"
+
+#: grc/templates/upload/statutory-declarations.html:40
+msgid "guidance on statutory declarations (opens in a new tab)"
+msgstr "cyfarwyddyd ar ddatganiadau statudol (yn agor mewn tab newydd)"
+
+#: grc/templates/upload/statutory-declarations.html:42
+msgid ""
+"to find out which declaration is right for you and who can act as a "
+"witness when you sign your declaration."
+msgstr ""
+"i ganfod pa ddatganiad sy’n briodol i’ch sefyllfa chi a phwy all "
+"weithredu fel tyst pan fyddwch yn llofnodi eich datganiad."
 
 #: grc/upload/constants.py:10
 msgid "Click on either the 'Upload file' button or 'Save and continue' button"
