--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-13 15:23+0100\n"
+"POT-Creation-Date: 2024-05-13 16:41+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -1104,11 +1104,11 @@ msgstr "Dogfennau newid enw"
 
 #: grc/templates/task-list.html:141
 msgid "Marriage and civil partnership documents"
-msgstr ""
+msgstr "Dogfennau priodas a phartneriaeth sifil"
 
 #: grc/templates/task-list.html:149
 msgid "Overseas certificate documents"
-msgstr ""
+msgstr "Dogfennau Tystysgrif o Dramor"
 
 #: grc/templates/task-list.html:156
 msgid "Statutory declarations"
@@ -3800,9 +3800,7 @@ msgstr ""
 
 #: grc/templates/upload/_upload-files-section.html:166
 msgid "You must upload a scan or good quality photograph of your documents."
-msgstr ""
-"Mae’n rhaid i chi uwchlwytho sgan neu lun o ansawdd da o’ch dogfennau "
-"newid enw."
+msgstr "Rhaid i chi uchlwytho sgan neu lun o ansawdd da o'ch dogfennau."
 
 #: grc/templates/upload/_upload-files-section.html:167
 msgid "If the document is longer than one page, you must upload every page."
@@ -3861,14 +3859,15 @@ msgid "to"
 msgstr "at"
 
 #: grc/templates/upload/evidence.html:31
+#: grc/templates/upload/marriage-documents.html:25
 #: grc/templates/upload/medical-reports.html:25
 msgid "Find out more about the"
-msgstr "Rhagor o wybodaeth am yr"
+msgstr "Rhagor o wybodaeth am"
 
 #: grc/templates/upload/evidence.html:33
 msgid "evidence of living in your gender you need (opens in new tab)"
 msgstr ""
-"dystiolaeth o fyw yn eich rhywedd sydd ei hangen arnoch (yn agor mewn tab"
+"y dystiolaeth o fyw yn eich rhywedd sydd ei hangen arnoch (yn agor mewn tab"
 " newydd)"
 
 #: grc/templates/upload/evidence.html:37
@@ -3887,6 +3886,27 @@ msgstr ""
 "Peidiwch ag uwchlwytho dogfen rydych eisoes wedi’i chyflwyno, megis "
 "adroddiad meddygol."
 
+#: grc/templates/upload/marriage-documents.html:6
+#: grc/templates/upload/marriage-documents.html:19
+msgid "Upload marriage or civil partnership documents"
+msgstr "Uwchlwytho dogfennau priodas neu bartneriaeth sifil"
+
+#: grc/templates/upload/marriage-documents.html:22
+msgid ""
+"This is where you can upload copies of your marriage or civil partnership"
+" documents."
+msgstr ""
+"Dyma lle y gallwch uwchlwytho copïau o’ch dogfennau priodas neu "
+"bartneriaeth sifil."
+
+#: grc/templates/upload/marriage-documents.html:28
+msgid ""
+"documents you need if you’ve ever been married or in a civil partnership "
+"(opens in new tab)"
+msgstr ""
+"y dogfennau sydd ei hangen arnoch os ydych erioed wedi bod yn briod neu "
+"mewn partneriaeth sifil (yn agor mewn tab newydd)"
+
 #: grc/templates/upload/medical-reports.html:6
 #: grc/templates/upload/medical-reports.html:19
 msgid "Upload your medical reports"
@@ -3898,7 +3918,7 @@ msgstr "Dyma lle y gallwch uwchlwytho eich 2 adroddiad meddygol."
 
 #: grc/templates/upload/medical-reports.html:28
 msgid "medical reports you need (opens in new tab)"
-msgstr "adroddiadau meddygol sydd eu hangen arnoch (yn agor mewn tab newydd)"
+msgstr "yr adroddiadau meddygol sydd eu hangen arnoch (yn agor mewn tab newydd)"
 
 #: grc/templates/upload/medical-reports.html:32
 msgid ""
@@ -3933,11 +3953,11 @@ msgstr ""
 
 #: grc/templates/upload/overseas-certificate.html:25
 msgid "Find out more about documents you can submit"
-msgstr ""
+msgstr "Rhagor o wybodaeth am ddogfennau y gallwch eu cyflwyno"
 
 #: grc/templates/upload/overseas-certificate.html:28
 msgid "if you’re on the overseas route (opens in new tab)"
-msgstr ""
+msgstr "os ydych ar y llwybr tramor (yn agor mewn tab newydd)"
 
 #: grc/templates/upload/statutory-declarations.html:6
 #: grc/templates/upload/statutory-declarations.html:19
