--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-14 11:41+0100\n"
+"POT-Creation-Date: 2024-05-14 13:59+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -951,6 +951,14 @@ msgstr "Do, ac mae gennyf fy nghyfeirnod"
 msgid "Yes, but I have lost my reference number"
 msgstr "Do, ond rwyf wedi colli fy nghyfeirnod"
 
+#: grc/submit_and_pay/constants.py:6
+msgid "No, I will pay now"
+msgstr "Nac ydw, mi wnaf dalu’r ffi nawr"
+
+#: grc/submit_and_pay/constants.py:9
+msgid "Select if you are applying for help paying the fee"
+msgstr "Dewiswch os ydych chi’n gwneud cais am help i dalu’r ffi"
+
 #: grc/templates/base.html:66
 msgid "Apply for a Gender Recognition Certificate"
 msgstr "Gwneud cais am Dystysgrif Cydnabod Rhywedd"
@@ -1029,7 +1037,7 @@ msgstr ""
 msgid "Your application is saved automatically as you progress"
 msgstr "Bydd eich cais yn cael ei gadw’n awtomatig wrth i chi ei gwblhau"
 
-#: grc/templates/task-list.html:42
+#: grc/templates/submit-and-pay/method.html:27 grc/templates/task-list.html:42
 msgid "You can"
 msgstr "Gallwch"
 
@@ -3745,6 +3753,41 @@ msgstr "Byddwch angen eich cyfeirnod i ddychwelyd i’ch cais"
 #: grc/templates/start-application/reference-number.html:27
 msgid "Keep a record of it – it can't be recovered if you lose it"
 msgstr "Cadwch gofnod ohono - ni allwch ei gael yn ôl os byddwch yn ei golli"
+
+#: grc/templates/submit-and-pay/method.html:7
+#: grc/templates/submit-and-pay/method.html:20
+msgid "Payment"
+msgstr "Talu"
+
+#: grc/templates/submit-and-pay/method.html:24
+msgid "Applying for a Gender Recognition Certificate costs &pound;5."
+msgstr "Mae gwneud cais am Dystysgrif Cydnabod Rhywedd yn costio &pound;5."
+
+#: grc/templates/submit-and-pay/method.html:30
+msgid "apply online for help paying this fee (opens in a new tab)"
+msgstr "wneud cais ar-lein am help i dalu’r ffi hon (yn agor mewn tab newydd)"
+
+#: grc/templates/submit-and-pay/method.html:34
+msgid ""
+"You can also download the EX160 form from that page and submit it with "
+"your application."
+msgstr ""
+"Gallwch hefyd lawrlwytho ffurflen EX160 o’r dudalen honno a’i chyflwyno "
+"gyda’ch cais."
+
+#: grc/templates/submit-and-pay/method.html:43
+msgid "Are you applying for help paying the fee?"
+msgstr "Ydych chi’n gwneud cais am help i dalu’r ffi?"
+
+#: grc/templates/submit-and-pay/method.html:47
+msgid ""
+"If you select yes, your application for a Gender Recognition Certificate "
+"will only be reviewed if your application for help paying the fee is "
+"accepted."
+msgstr ""
+"Os byddwch yn dewis ‘Ydw’, bydd eich cais am Dystysgrif Cydnabod Rhywedd "
+"ond yn cael ei adolygu os bydd eich cais am help i dalu’r ffi yn cael ei "
+"dderbyn."
 
 #: grc/templates/upload/_upload-files-section.html:11
 msgid "The upload failed. Please remove your files and re-upload."
