--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -3963,7 +3963,7 @@ msgstr "Cyflwyno’r cais"
 
 #: grc/templates/submit-and-pay/check-your-answers.html:527
 msgid "Submit application and pay online"
-msgstr ""
+msgstr "Cyflwyno’r cais a thalu ar-lein"
 
 #: grc/templates/submit-and-pay/help-type.html:8
 #: grc/templates/submit-and-pay/help-type.html:21
