--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-16 11:28+0100\n"
+"POT-Creation-Date: 2024-05-16 14:58+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -883,19 +883,23 @@ msgstr ""
 msgid "Online"
 msgstr ""
 
-#: grc/business_logic/constants/submit_and_pay.py:15
-msgid "Select if you are applying for help paying the fee"
+#: grc/business_logic/constants/submit_and_pay.py:13
+msgid "Pay for Gender Recognition Certificate"
 msgstr ""
 
 #: grc/business_logic/constants/submit_and_pay.py:16
-msgid "Select how are you applying for help paying the fee"
+msgid "Select if you are applying for help paying the fee"
 msgstr ""
 
 #: grc/business_logic/constants/submit_and_pay.py:17
-msgid "Enter your Help with Fees reference number"
+msgid "Select how are you applying for help paying the fee"
 msgstr ""
 
 #: grc/business_logic/constants/submit_and_pay.py:18
+msgid "Enter your Help with Fees reference number"
+msgstr ""
+
+#: grc/business_logic/constants/submit_and_pay.py:19
 msgid ""
 "You must certify that all information given in this application is "
 "correct and that you understand making a false application is an offence."
