RST-6653 translate email sent doc checker page

--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-14 15:51+0100\n"
+"POT-Creation-Date: 2024-05-16 15:15+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -967,7 +967,7 @@ msgstr "Defnyddio’r gwasanaeth ar-lein"
 msgid "Using the EX160 form"
 msgstr "Defnyddio’r ffurflen EX160"
 
-#: grc/submit_and_pay/constants.py:11
+#: grc/submit_and_pay/constants.py:11 grc/submit_and_pay/constants.py:17
 msgid "Select if you are applying for help paying the fee"
 msgstr "Dewiswch os ydych chi’n gwneud cais am help i dalu’r ffi"
 
@@ -1464,8 +1464,29 @@ msgid "Continue"
 msgstr "Parhau"
 
 #: grc/templates/document-checker/email-address.html:45
+#: grc/templates/document-checker/email-sent.html:33
 msgid "Return to your documents list"
 msgstr "Dychwelyd at eich rhestr o ddogfennau"
+
+#: grc/templates/document-checker/email-sent.html:5
+#: grc/templates/document-checker/email-sent.html:17
+msgid "Email sent"
+msgstr "E-bost wedi’i anfon"
+
+#: grc/templates/document-checker/email-sent.html:22
+msgid ""
+"You should shortly receive an email with the required documents for "
+"applying for a gender recognition certification."
+msgstr "Dylech gael neges e-bost yn fuan gyda’r dogfennau angenrheidiol ar gyfer gwneud cais am ardystiad cydnabod rhywedd."
+
+#: grc/templates/document-checker/email-sent.html:25
+#: grc/templates/document-checker/your-documents.html:381
+msgid "Once you have your documents ready you can"
+msgstr "Unwaith y bydd eich dogfennau'n barod"
+
+#: grc/templates/document-checker/email-sent.html:27
+msgid "apply for a certificate"
+msgstr "gallwch wneud cais am dystysgrif"
 
 #: grc/templates/document-checker/gender-recognition-outside-uk.html:7
 #: grc/templates/document-checker/gender-recognition-outside-uk.html:23
@@ -2155,10 +2176,6 @@ msgstr ""
 #: grc/templates/document-checker/your-documents.html:378
 msgid "You’ll need to send in both the original documents and the translations"
 msgstr "Bydd angen i chi anfon y dogfennau gwreiddiol a'r cyfieithiadau atom"
-
-#: grc/templates/document-checker/your-documents.html:381
-msgid "Once you have your documents ready you can"
-msgstr "Unwaith y bydd eich dogfennau'n barod"
 
 #: grc/templates/document-checker/your-documents.html:383
 msgid "apply for a Gender Recognition Certificate"
