--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -965,7 +965,7 @@ msgstr "Ar-lein"
 
 #: grc/business_logic/constants/submit_and_pay.py:13
 msgid "Pay for Gender Recognition Certificate"
-msgstr ""
+msgstr "Talu am Ystysgrif Cydnabod Rhywedd"
 
 #: grc/business_logic/constants/submit_and_pay.py:16
 msgid "Select if you are applying for help paying the fee"
